--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"
+      lang="en"
     />
-    <title></title>
+    <title>My Portfolio</title>
     <link rel="stylesheet" href="styles/mobile.css" />
     <link
       rel="stylesheet"
@@ -35,7 +36,7 @@
           <h2>Welcome</h2>
           <p>
             <img
-              src="images/dishOne.jpg"
+              src="images/dishOne.jpg" alt="Dish"
               width="900"
               height="200"
               class="resize-img"
@@ -48,7 +49,7 @@
             well as mobile applications.
           </p>
           <p>
-            <img src="images/300x200.jpg" class="left-float" />Lorem ipsum dolor
+            <img src="images/300x200.jpg" alt="300px img" class="left-float" />Lorem ipsum dolor
             sit amet, consectetur adipisicing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua. Ut enim ad minim
             veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
@@ -68,7 +69,7 @@
           </p>
         </section>
         <div class="sidebar">
-          <p><img src="images/square200px.png" /></p>
+          <p><img src="images/square200px.png" alt="sidebar pic" /></p>
           <h2>Contact Details</h2>
           <address>My Address</address>
           <p>
